[project]
name = "ihela-sdk"
version = "0.4.0"
description = "Python SDK for the iHela financial services API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
authors = [
    { name = "UbuViz", email = "info@ubuviz.com" }
]
keywords = [
    "ihela",
    "burundi",
    "banking",
    "payments",
    "mobile-money",
    "api-client",
    "oauth2",
    "financial-services",
]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/UbuhingaVizion/ihela-sdk"
Repository = "https://github.com/UbuhingaVizion/ihela-sdk"
Documentation = "https://UbuhingaVizion.github.io/ihela-sdk/"
"Issue Tracker" = "https://github.com/UbuhingaVizion/ihela-sdk/issues"
Changelog = "https://github.com/UbuhingaVizion/ihela-sdk/releases"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.9.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "tox>=4.0.0",
    "tox-uv>=1.25.0",
    "mypy>=1.0",
    "twine>=5.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ihela_sdk"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # Line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-third-party = ["httpx"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = false
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "pydantic.*",
    "httpx.*",
]
ignore_missing_imports = true
